--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
    function homePage()
    {
      // Code to take us to the donate page
-     window.open('https://d4q2.github.io/home');
+     window.open('https://d4q2.github.io/Safe-Home');
    }
 
    // And the same thing for the host drive page
    function hostDrivePage()
    {
-     window.open('https://d4q2.github.io/hostdrive');
+     window.open('https://d4q2.github.io/Safe-HostDrive');
    }
 
    // And for the settings page
    function settingsPage()
    {
-     window.open('https://d4q2.github.io/settings');
+     window.open('https://d4q2.github.io/Safe-Settings');
    }
 
 
