--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    Donate
   </title>
 
-  <link rel="shortcut icon" href="/Users/daniel/Desktop/SAFE logo.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="SAFE logo.png" type="image/x-icon" />
 
   <style>
    body
@@ -265,7 +265,7 @@
   </div>
 
   <div class="finkImage" id="finkImage">
-   <image src="file:///Users/daniel/Desktop/Finksburg.png" width="500px">
+   <image src="Finksburg.png" width="500px">
    <br>
    <a href="https://goo.gl/maps/XfNWHMmcDUWXSscc6">Open in Google Maps</a>
   </div>
@@ -276,7 +276,7 @@
 
 
   <div class="philImage" id="philImage">
-   <image src="file:///Users/daniel/Desktop/Philadelphia.png" width="500px">
+   <image src="Philadelphia.png" width="500px">
    <br>
    <a href="https://goo.gl/maps/pEtwNaQJh3AdvTBm8">Open in Google Maps</a>
   </div>
@@ -292,7 +292,7 @@
 
 
   <div class="towImage" id="towImage">
-   <image src="file:///Users/daniel/Desktop/Towson.png" width="500px">
+   <image src="Towson.png" width="500px">
    <br>
    <a href="https://goo.gl/maps/EYt6VnUxaUn6LwhVA">Open in Google Maps</a>
   </div>
