--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="SAFE logo.png" type="image/x-icon" />
 
   <style>
-   body
+     body
    {
      background-color: #7fdbff;
    }
@@ -107,17 +107,18 @@
    .philImage
    {
      float: left;
-     margin-top: 30px;
+     margin-top: 230px;
      margin-left: 50px;
      text-align: center;
    }
 
    .philText
    {
-     margin-top: 13px;
+     margin-top: 180px;
      float: right;
-     margin-right: 50px;
+     margin-right: -170px;
      font-size: 18pt;
+     text-align: right;
    }
 
 
@@ -125,7 +126,7 @@
    {
      float: left;
      text-align: center;
-     margin-top: 50px;
+     margin-top: 100px;
      margin-left: 50px;
      font-size: 24pt;
      font-weight: bold;
@@ -134,14 +135,14 @@
    .towImage
    {
      float: right;
-     margin-top: 30px;
+     margin-top: 200px;
      margin-right: 50px;
      text-align: center;
    }
 
    .towText
    {
-     margin-top: 730px;
+     margin-top: 760px;
      margin-left: 50px;
      font-size: 18pt;
    }
